# reachy-mini-desktop-app

./: .gitattributes  .gitignore  AMELIORATIONS_DIAGNOSTIC.md  BEST_PRACTICES_NETWORK_DISCOVERY.md  CONTEXT.md  DIAGNOSTIC_IMPROVEMENTS.md  E2E_TESTING_RESEARCH.md  MDNS_DISCOVERY_IMPLEMENTATION.md  PROBLEME_VPN_ANALYSE.md  PR_SUMMARY.md  README.md  SOLUTION_ROBUSTE_VPN.md  TEST_DIAGNOSTIC_IMPROVEMENTS.md  VPN_CONNECTIVITY_ANALYSIS.md  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.js
.ai/style-migration/: README.md  _shared-context.md  bucket-1-logconsole.md  bucket-2-application-store.md  bucket-3-finding-setup.md  bucket-4-active-robot-shell.md  bucket-5-controller.md  bucket-6-shared-cleanup.md
.claude/: settings.local.json
.github/workflows/: build-macos-unsigned.yml  ci.yml  deploy-pages.yml  release-unified.yml
docs/: DISCOVERY_IMPROVEMENT_PLAN.md  KNOWN_BUGS.md  LINUX_BUILD_PYINSTALLER.md  latest.json
e2e/: README.md  wdio.conf.js
e2e/specs/: app-launch.spec.js
scripts/: avast_ssl_fix.py  style-migration-status.sh  validate-style-migration.sh
scripts/utils/: clean.sh
src/: main.jsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  python-entitlements.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/btleplug-patch/: Cargo.toml
src-tauri/btleplug-patch/src/bluez/: mod.rs  peripheral.rs  raw_att.rs
src-tauri/btleplug-patch/src/common/: adapter_manager.rs
src-tauri/btleplug-patch/src/corebluetooth/: central_delegate.rs  internal.rs
src-tauri/capabilities/: app-windows.json  default.json  journal-window.json
src-tauri/linux/: 99-reachy-mini.rules  inject-deb-scripts.sh
src-tauri/linux/gstreamer-plugins/: README.md
src-tauri/src/: lib.rs  local_proxy.rs  main.rs  paths.rs  reset.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/permissions/: bluetooth_permission.m  mod.rs  nw_local_network.m
src-tauri/src/python/: mod.rs
src-tauri/src/signing/: mod.rs
src-tauri/src/update/: mod.rs
src-tauri/src/usb/: mod.rs  monitor.rs
src-tauri/src/wifi/: corewlan_scan.m  mod.rs
src-tauri/src/window/: mod.rs
uv-wrapper/: Cargo.toml  build.rs
(+430 files in other folders)
